# shad_c_hw1

./: CMakeLists.txt  main.c  number_operations.c  number_operations.h  str_ops.c  str_ops.h  test_framework.h  tests.cc  utils.h
